argocd/patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  template:
    spec:
      containers:
        - name: argocd-server
          args: 
            - "argocd-server"
            - "--insecure"
            - "--staticassets"
            - "/opt/storage/k3s/argocd"
