argocd/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  tls:
    secretName: traefik-tls
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.kube.internal`)
      services:
        - name: api@internal
          kind: TraefikService
